feat(ingestion): importar thumbnails do Gutenberg
